# miadas_M03_L04

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  dashboard.py  dashboard3.py  dashboard4.py  dashboard_bk.py  pyproject.toml
_data/: .~lock.ClientesRelacionadas.xlsx#  ClientesRelacionadas.xlsx  ComprasRelacionadas.xlsx  VentasRelacionadas.xlsx
